<resources>
    <string name="app_name">TicTacToe</string>

    <string name="appTitle">Tic Tac Toe</string>
    <string name="playButton">Play</string>

    <string name="PlayerSetupTitle">Enter Your Name</string>
    <string name="Label1">Player 1</string>
    <string name="Label2">Player 2</string>
    <string name="submitButton">Submit</string>
    <string name="nameHint">Enter Your Name</string>

    <string name="playAgainButton">Play Again</string>
    <string name="homeButton">Home</string>
</resources>