<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9CCC65"
    tools:context=".PlayerSetup">

    <EditText
        android:id="@+id/player2Name"
        android:layout_width="221dp"
        android:layout_height="56dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/nameHint"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player1Name" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Label2"
        android:textAllCaps="true"
        app:layout_constraintBottom_toTopOf="@+id/player2Name"
        app:layout_constraintStart_toStartOf="@+id/player2Name" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/PlayerSetupTitle"
        android:textColor="#BAFFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Label1"
        android:textAllCaps="true"
        app:layout_constraintBottom_toTopOf="@+id/player1Name"
        app:layout_constraintStart_toStartOf="@+id/player1Name" />

    <EditText
        android:id="@+id/player1Name"
        android:layout_width="223dp"
        android:layout_height="52dp"
        android:layout_marginTop="112dp"
        android:ems="10"
        android:hint="@string/nameHint"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@drawable/play_button"
        android:onClick="submitButtonClick"
        android:text="@string/submitButton"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player2Name"
        app:layout_constraintVertical_bias="0.082" />
</androidx.constraintlayout.widget.ConstraintLayout>